--- a/customer/pom.xml
+++ b/customer/pom.xml
@@ -20,6 +20,11 @@
       <version>17.0.6</version>
     </dependency>
     <dependency>
+      <groupId>org.example</groupId>
+      <artifactId>shared-model</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-fxml</artifactId>
       <version>17.0.6</version>
