--- a/teller/pom.xml
+++ b/teller/pom.xml
@@ -86,7 +86,7 @@
             <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>org.example.teller/org.example.teller.HelloApplication</mainClass>
+              <mainClass>org.example.teller/org.example.teller.CajaApplication</mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
