--- a/teller/pom.xml
+++ b/teller/pom.xml
@@ -64,7 +64,14 @@
       <artifactId>junit-jupiter-engine</artifactId>
       <version>${junit.version}</version>
       <scope>test</scope>
-    </dependency>  </dependencies>
+    </dependency>
+      <dependency>
+          <groupId>org.example</groupId>
+          <artifactId>shared-model</artifactId>
+          <version>1.0-SNAPSHOT</version>
+          <scope>compile</scope>
+      </dependency>
+  </dependencies>
 
   <build>
     <plugins>
